--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ ga_domain: yuangcao.github.io
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "An undergraduate CS student at University of Science and Technology of China."
-sidebar-avatar: /img/avatar-hux-ny.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/profile-photo.jpeg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
