--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: caoya blog
-SEOTitle: caoya blog
+title: cya blog
+SEOTitle: cya blog
 header-img: img/home-bg.jpg
 email: cyadxx@mail.ustc.edu.cn
 description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
