--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: cya blog
 SEOTitle: cya blog
 header-img: img/home-bg.jpg
 email: cyadxx@mail.ustc.edu.cn
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
+# description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
+# keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
 url: "https://yuangcao.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -79,7 +79,7 @@ ga_domain: yuangcao.github.io
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
-sidebar-about-description: "An undergraduate CS student at University of Science and Technology of China."
+sidebar-about-description: "A graduate CS student at University of Science and Technology of China."
 sidebar-avatar: /img/profile-photo.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
